# resident-ai

./: .gitignore  CLAUDE.md  Cargo.toml  go.mod  main.go
examples/: photo_analyze.rs
issues/: 001-acp-over-stdio.md
pkg/acp/: acp.go  acp_test.go  integration_test.go  local_integration_test.go  long_session_test.go  mock_test.go
pkg/api/: api.go  api_test.go
src/: acp.rs  api.rs  conpty.rs  lib.rs  session.rs
tests/: acp_behavior.py  acp_handshake.py
