[package]
name = "resident-ai"
version = "0.1.0"
edition = "2021"
description = "Persistent AI CLI session via ConPTY with tag-based response extraction"

[dependencies]
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
] }
